<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/rick_morty_black">


    <Button
        android:id="@+id/insertar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="125dp"
        android:text="@string/insertar_personaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/modificar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/modificar"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertar"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/buscar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/buscar"
        app:layout_constraintTop_toBottomOf="@id/modificar"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="52dp"/>

    <Button
        android:id="@+id/listar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/listar"
        app:layout_constraintTop_toBottomOf="@id/buscar"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="52dp"/>

    <Button
        android:id="@+id/borrar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/borrar"
        app:layout_constraintTop_toBottomOf="@id/listar"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="52dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>